--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1897,6 +1897,9 @@ section#shop {
   padding-top: 70px; }
   section#shop h1 {
     text-align: center; }
+  @media (max-width: 772px) {
+    section#shop .tiny-12 {
+      margin: -23px 0; } }
   section#shop .item {
     margin: 45px 25px;
     padding: 0 0 20px 0;
